<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/nameOfTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#0000"
            android:hint="@string/layout_edit_task_name_hint"
            android:maxLines="1"
            android:textColor="#000"
            android:textSize="14pt"
            android:textStyle="bold"
            android:inputType="textNoSuggestions"
            android:nextFocusUp="@id/nameOfTask"
            android:nextFocusDown="@id/nameOfTask"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="add1"
                    android:text="+1" />

                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="add5"
                    android:text="+5" />

                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="add10"
                    android:text="+10" />

                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="add"
                    android:text="+..." />

            </LinearLayout>


            <TextView
                android:id="@+id/count"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="0"
                android:textSize="16pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="sub1"
                    android:text="-1" />

                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="sub5"
                    android:text="-5" />

                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="sub10"
                    android:text="-10" />

                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="sub"
                    android:text="-..." />

            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/repeat"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layoutDirection="rtl"
            android:text="@string/layout_edit_task_repeat"
            android:buttonTint="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/repeatLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/layout_edit_task_every"
                    android:textColor="#000"
                    android:textSize="10pt" />

                <EditText
                    android:id="@+id/countOfRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="1"
                    android:hint="@string/layout_edit_task_count_of_repeat_hint"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="8pt" />

                <Spinner
                    android:id="@+id/unitOfRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:backgroundTint="@color/colorPrimary"
                    android:entries="@array/timeUnits"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_seconds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="8pt"
                        android:text="@string/seconds"/>

                    <EditText
                        android:id="@+id/seconds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/seconds"
                        android:text="00"
                        android:textSize="8pt"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColor="#000"
                        android:maxLines="1"
                        android:maxLength="2"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_minutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="8pt"
                        android:text="@string/minutes"/>

                    <EditText
                        android:id="@+id/minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/minutes"
                        android:text="00"
                        android:textSize="8pt"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColor="#000"
                        android:maxLines="1"
                        android:maxLength="2"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="8pt"
                        android:text="@string/hours"/>

                    <EditText
                        android:id="@+id/hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hours"
                        android:text="00"
                        android:textSize="8pt"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColor="#000"
                        android:maxLines="1"
                        android:maxLength="2"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_dayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="8pt"
                        android:text="@string/dayOfWeek"/>

                    <Spinner
                        android:id="@+id/dayOfWeek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/daysOfWeek"
                        android:contentDescription="@string/dayOfWeek">
                    </Spinner>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/days"
                        android:textColor="#000"
                        android:textSize="8pt" />

                    <EditText
                        android:id="@+id/days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/days"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:text="0"
                        android:textColor="#000"
                        android:textSize="8pt" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"
                        android:textColor="#000"
                        android:textSize="8pt" />

                    <EditText
                        android:id="@+id/month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/month"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:text="0"
                        android:textColor="#000"
                        android:textSize="8pt" />

                </LinearLayout>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="right"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/typeOfAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:entries="@array/typeOfActions"/>

                <EditText
                    android:id="@+id/countOfAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="1"
                    android:hint="@string/layout_edit_task_count_of_action_hint"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="10pt" />


            </LinearLayout>

            <CheckBox
                android:id="@+id/usingAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/colorPrimary"
                android:layoutDirection="rtl"
                android:text="@string/layout_edit_task_alarm_is_on"
                android:textColor="#000"
                android:textSize="10pt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_edit_task_max_count" />

            <EditText
                android:id="@+id/maxCount"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:inputType="number"
                android:text="0"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/layout_edit_task_value_of_max_count_hint"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/layout_edit_task_ok_button"
                android:background="@null"
                android:onClick="ok"/>

            <Button
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/layout_edit_task_cancel_button"
                android:background="@null"
                android:onClick="cancel"/>


        </LinearLayout>


    </LinearLayout>
</ScrollView>